[package]
name = "fewerpngbits"
version = "0.1.0"
edition = "2024"
authors = ["René Kijewski <crates.io@k6i.de>"]
license = "MIT OR Apache-2.0 OR ISC"
rust-version = "1.89"

[dependencies]
clap = { version = "4.5.48", features = ["derive", "error-context", "help", "std", "usage"], default-features = false }
displaydoc = "0.2.5"
git-testament = "0.2.6"
humantime = "2.3.0"
image = { version = "0.25.8", default-features = false, features = ["png"] }
memmap2 = "0.9.8"
oxipng = { version = "9.1.5", default-features = false, features = ["parallel", "zopfli"] }
pretty-error-debug = "0.3.2"
thiserror = "2.0.17"
